// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader default.js 1`] = `
<Component>
  <Loader
    loading={false}
    removeChildren={false}
    text="Loading"
  >
    <div>
      <button
        className="ui button"
        onClick={[Function]}
      >
        Click me
      </button>
    </div>
  </Loader>
</Component>
`;

exports[`loader different_text.js 1`] = `
<Component>
  <Loader
    loading={false}
    removeChildren={false}
    text="Wait for loading data"
  >
    <div>
      <button
        className="ui button"
        onClick={[Function]}
      >
        Click me
      </button>
    </div>
  </Loader>
</Component>
`;

exports[`loader remove_children.js 1`] = `
<Component>
  <Loader
    loading={false}
    removeChildren={true}
    text="Loading"
  >
    <div>
      <button
        className="ui button"
        onClick={[Function]}
      >
        Click me
      </button>
    </div>
  </Loader>
</Component>
`;

exports[`loader without_text.js 1`] = `
<Component>
  <Loader
    loading={false}
    removeChildren={false}
    text={null}
  >
    <div>
      <button
        className="ui button"
        onClick={[Function]}
      >
        Click me
      </button>
    </div>
  </Loader>
</Component>
`;
